<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_subtitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorRed"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_username" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/usernameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorRed"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/passwordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/errorRed"
            android:visibility="gone" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_cta"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_already_have_an_account" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_sign_in_here" />

    </LinearLayout>

</LinearLayout>
